# proygrado

./: .gitignore  README.md
DemoPoc.X/: main.c
DemoPoc.X/nbproject/: Makefile-default.mk  Makefile-impl.mk  Package-default.bash  configurations.xml  project.xml
Diagrams/: DM3Security_devices_communication.wsd  DM3_Classes.txt  DM3_IOBoard_Components.wsd  DM3_IO_BOARD_components.wsd  DM3_Modules.wsd  DM3_Packages.wsd  DM3_SBC_classes.wsd  DM3_States.txt  DM3_States.wsd  Dm3Security_bumper_logic.wsd  Dm3Security_pows_checks.wsd  Dm3Security_speeds_checks.wsd  Dm3Security_ultrasonic_logic.wsd  Dm3Security_updateStatus_logic.wsd  Dm3_security_status_report_logic.wsd  HDLC_Initiation.txt  HDLC_States.txt  HDLC_States_Receiver.wsd  HDLC_States_Sender.txt  MCC_States.txt  MCC_States.wsd  OLD_DM3_IOBoard_Components.wsd
Documentation/: Bibliografia.bib  RAS_state_of_the_art.lyx  title_page.tex
Documentation/Estado_del_arte/: Bibliografia.bib  RAS_state_of_the_art.tex
FRDMK64F_Shield/: FRDMK64F_Shield.bak  FRDMK64F_Shield.kicad_pcb  FRDMK64F_Shield.kicad_pcb-bak  FRDMK64F_Shield.net  FRDMK64F_Shield.pro  FRDMK64F_Shield.sch  FRDMK64F_Shield2.net
HID_Poc/hidtest/: hidtest.cpp
Hdlc_Poc/includes/: usb_controller.h
Hdlc_Poc/src/: Makefile  (+2 more)
Hello_FXOS8700Q/: .cproject  .project  Hello_FXOS8700Q.launch  main.cpp
SBC/: CMakeLists.txt  main.cpp
SBC/includes/: AdminModule.h  Communication.h  EmBencode.h  Mcc.h  frdm_communication.h  hdlc_controller.h  hdlc_receiver.h  hdlc_sender.h  yahdlc.h
SBC/sources/: AdminModule.cpp  Communication.cpp  EmBencode.cpp  Mcc.cpp  frdm_communication.cpp  hdlc_controller.cpp  hdlc_receiver.cpp  hdlc_sender.cpp  usb_controller.c  yahdlc.c
YL40_Test/: .cproject  .project  YL40_Test.launch  main.cpp
ras_fdrm/: .cproject  .project  main.cpp  ras_fdrm.launch
ras_frdm/: .cproject  .project  PCF8591.lib  main.cpp  mbed-rtos.lib  mbed_config.h  ras_frdm.launch
ros/pc_io_board/src/dm3_dashboard/: .gitignore  CMakeLists.txt  package.xml  setup.py
ros/pc_io_board/src/dm3_dashboard/plugins/: plugin.xml
ros/pc_io_board/src/dm3_dashboard/scripts/: dm3_dashboard
ros/pc_io_board/src/dm3_dashboard/src/dm3_dashboard/: battery_widget.py  dashboard.py  high_level_mode.py  motor_control_widget.py  motor_drive_widget.py  motor_state_widget.py
(+343 files in other folders)
